documented and production ready

--- a/kubeconfigs/services.yaml
+++ b/kubeconfigs/services.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name:	harmonizer-datadis
+  name:	harmonizer-datadis-icaen
   namespace: datadis
 spec:
   replicas: 10
   selector:
     matchLabels:
-      app: harmonizer-datadis
+      app: harmonizer-datadis-icaen
   strategy:
     type: Recreate
   template:
     metadata:
         labels:
-            app: harmonizer-datadis
+            app: harmonizer-datadis-icaen
     spec:
       hostAliases:
         - ip: "10.0.88.76"
@@ -47,20 +47,20 @@ spec:
           hostnames:
             - "database3-vpn"
       containers:
-        - name: harmonizer-datadis
+        - name: harmonizer-datadis-icaen
           image: docker.tech.beegroup-cimne.com/jobs/datadis:latest
-          command: ["python3", "-m", "harmonizers.sime_harmonizer", "worker", "-l", "info"]
+          command: [ "python3", "-m", "plugins.icaen", "worker", "-l", "info"]
+          #command: ["/bin/sh", "-ec", "sleep 1000"]
           env:
             - name: CONF_FILE
               value: "config.json"
-          #command: ["/bin/sh", "-ec", "sleep 1000"]
           volumeMounts:
           - name: datadis-harmonize-secret
             mountPath: /home/ubuntu/datadis/config.json
             subPath: config.json
-          - name: datadis-harmonize-secret
-            mountPath: /home/ubuntu/datadis/.env
-            subPath: .env
+          - name: datadis-icaen-secret
+            mountPath: /home/ubuntu/datadis/plugins/icaen/config_icaen.json
+            subPath: config_icaen.json
       imagePullSecrets:
         - name: registrypullsecret
 
@@ -71,8 +71,12 @@ spec:
             items:
             - key: config.json
               path: config.json
-            - key: .env
-              path: .env
+        - name: datadis-icaen-secret
+          secret:
+            secretName: datadis-icaen-secret
+            items:
+              - key: config_icaen.json
+                path: config_icaen.json
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -134,12 +138,8 @@ spec:
           - name: datadis-harmonize-secret
             mountPath: /home/ubuntu/datadis/config.json
             subPath: config.json
-          - name: datadis-harmonize-secret
-            mountPath: /home/ubuntu/datadis/.env
-            subPath: .env
       imagePullSecrets:
         - name: registrypullsecret
-
       volumes:
         - name: datadis-harmonize-secret
           secret:
@@ -147,8 +147,6 @@ spec:
             items:
             - key: config.json
               path: config.json
-            - key: .env
-              path: .env
 ---
 apiVersion: batch/v1
 kind: CronJob
@@ -198,7 +196,7 @@ spec:
           containers:
           - name: bigg-datadis-gather-last
             image: docker.tech.beegroup-cimne.com/jobs/datadis:latest
-            command: ["python3", "main.py", "-p", "last"]
+            command: ["python3", "launcher.py", "-p", "last"]
             env:
               - name: CONF_FILE
                 value: "config.json"
@@ -206,10 +204,12 @@ spec:
             - name: datadis-harmonize-secret
               mountPath: /home/ubuntu/datadis/config.json
               subPath: config.json
-
-            - name: datadis-harmonize-secret
-              mountPath: /home/ubuntu/datadis/.env
-              subPath: .env
+            - name: datadis-icaen-secret
+              mountPath: /home/ubuntu/datadis/plugins/icaen/config_icaen.json
+              subPath: config_icaen.json
+            - name: datadis-icat-secret
+              mountPath: /home/ubuntu/datadis/plugins/infraesructures/config_infra.json
+              subPath: config_infra.json
           volumes:
           - name: datadis-harmonize-secret
             secret:
@@ -217,8 +217,18 @@ spec:
               items:
               - key: config.json
                 path: config.json
-              - key: .env
-                path: .env
+          - name: datadis-icaen-secret
+            secret:
+              secretName: datadis-icaen-secret
+              items:
+                - key: config_icaen.json
+                  path: config_icaen.json
+          - name: datadis-icat-secret
+            secret:
+              secretName: datadis-icat-secret
+              items:
+                - key: config_infra.json
+                  path: config_infra.json
           restartPolicy: Never
           imagePullSecrets:
           - name: registrypullsecret
@@ -272,7 +282,7 @@ spec:
           containers:
           - name: bigg-datadis-gather-repair
             image: docker.tech.beegroup-cimne.com/jobs/datadis:latest
-            command: ["python3", "main.py", "-p", "repair"]
+            command: ["python3", "launcher.py", "-p", "repair"]
             env:
               - name: CONF_FILE
                 value: "config.json"
@@ -280,10 +290,12 @@ spec:
             - name: datadis-harmonize-secret
               mountPath: /home/ubuntu/datadis/config.json
               subPath: config.json
-
-            - name: datadis-harmonize-secret
-              mountPath: /home/ubuntu/datadis/.env
-              subPath: .env
+            - name: datadis-icaen-secret
+              mountPath: /home/ubuntu/datadis/plugins/icaen/config_icaen.json
+              subPath: config_icaen.json
+            - name: datadis-icat-secret
+              mountPath: /home/ubuntu/datadis/plugins/infraesructures/config_infra.json
+              subPath: config_infra.json
           volumes:
           - name: datadis-harmonize-secret
             secret:
@@ -291,8 +303,18 @@ spec:
               items:
               - key: config.json
                 path: config.json
-              - key: .env
-                path: .env
+          - name: datadis-icaen-secret
+            secret:
+              secretName: datadis-icaen-secret
+              items:
+                - key: config_icaen.json
+                  path: config_icaen.json
+          - name: datadis-icat-secret
+            secret:
+              secretName: datadis-icat-secret
+              items:
+                - key: config_infra.json
+                  path: config_infra.json
           restartPolicy: Never
           imagePullSecrets:
           - name: registrypullsecret
