--- a/kubeconfigs/services.yaml
+++ b/kubeconfigs/services.yaml
@@ -160,6 +160,7 @@ spec:
   failedJobsHistoryLimit: 1
   jobTemplate:
     spec:
+      backoffLimit: 0
       template:
         spec:
           hostAliases:
@@ -197,6 +198,7 @@ spec:
           - name: bigg-datadis-gather-last
             image: docker.tech.beegroup-cimne.com/jobs/datadis:latest
             command: ["python3", "launcher.py", "-p", "last"]
+            #command: ["/bin/sh", "-ec", "sleep 1000"]
             env:
               - name: CONF_FILE
                 value: "config.json"
@@ -208,7 +210,7 @@ spec:
               mountPath: /home/ubuntu/datadis/plugins/icaen/config_icaen.json
               subPath: config_icaen.json
             - name: datadis-icat-secret
-              mountPath: /home/ubuntu/datadis/plugins/infraesructures/config_infra.json
+              mountPath: /home/ubuntu/datadis/plugins/infraestructures/config_infra.json
               subPath: config_infra.json
           volumes:
           - name: datadis-harmonize-secret
@@ -246,6 +248,7 @@ spec:
   failedJobsHistoryLimit: 1
   jobTemplate:
     spec:
+      backoffLimit: 0
       template:
         spec:
           hostAliases:
@@ -294,7 +297,7 @@ spec:
               mountPath: /home/ubuntu/datadis/plugins/icaen/config_icaen.json
               subPath: config_icaen.json
             - name: datadis-icat-secret
-              mountPath: /home/ubuntu/datadis/plugins/infraesructures/config_infra.json
+              mountPath: /home/ubuntu/datadis/plugins/infraestructures/config_infra.json
               subPath: config_infra.json
           volumes:
           - name: datadis-harmonize-secret
