--- a/kubeconfigs/services.yaml
+++ b/kubeconfigs/services.yaml
@@ -154,7 +154,7 @@ metadata:
   name: bigg-datadis-gather-last
   namespace: datadis
 spec:
-  suspend: true
+  suspend: false
   schedule: "0 22 * * 5"
   successfulJobsHistoryLimit: 1
   failedJobsHistoryLimit: 1
@@ -242,8 +242,8 @@ metadata:
   name: bigg-datadis-gather-repair
   namespace: datadis
 spec:
-  suspend: true
-  schedule: "0 22 * * 5"
+  suspend: false
+  schedule: "0 22 * * 0"
   successfulJobsHistoryLimit: 1
   failedJobsHistoryLimit: 1
   jobTemplate:
