--- a/kubeconfigs/services.yaml
+++ b/kubeconfigs/services.yaml
@@ -78,80 +78,10 @@ spec:
               - key: config_icaen.json
                 path: config_icaen.json
 ---
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name:	raw-store-datadis
-  namespace: datadis
-spec:
-  replicas: 10
-  selector:
-    matchLabels:
-      app: raw-store-datadis
-  strategy:
-    type: Recreate
-  template:
-    metadata:
-        labels:
-            app: raw-store-datadis
-    spec:
-      hostAliases:
-        - ip: "10.0.88.76"
-          hostnames:
-            - "master1.internal"
-        - ip: "10.0.87.95"
-          hostnames:
-            - "master2.internal"
-        - ip: "10.0.88.132"
-          hostnames:
-            - "worker1.internal"
-        - ip: "10.0.86.33"
-          hostnames:
-            - "worker2.internal"
-        - ip: "10.0.87.145"
-          hostnames:
-            - "worker3.internal"
-        - ip: "10.0.86.214"
-          hostnames:
-            - "worker4.internal"
-        - ip: "10.0.129.220"
-          hostnames:
-            - "kafka1.internal"
-        - ip: "10.0.88.175"
-          hostnames:
-            - "database1-vpn"
-        - ip: "10.0.88.151"
-          hostnames:
-            - "database2-vpn"
-        - ip: "10.0.87.50"
-          hostnames:
-            - "database3-vpn"
-      containers:
-        - name: raw-store-datadis
-          image: docker.tech.beegroup-cimne.com/jobs/datadis:latest
-          command: ["python3", "-m", "store_raw", "worker", "-l", "info"]
-          env:
-            - name: CONF_FILE
-              value: "config.json"
-          #command: ["/bin/sh", "-ec", "sleep 1000"]
-          volumeMounts:
-          - name: datadis-harmonize-secret
-            mountPath: /home/ubuntu/datadis/config.json
-            subPath: config.json
-      imagePullSecrets:
-        - name: registrypullsecret
-      volumes:
-        - name: datadis-harmonize-secret
-          secret:
-            secretName: datadis-harmonize-secret
-            items:
-            - key: config.json
-              path: config.json
----
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: bigg-datadis-gather-last
+  name: datadis-gather-starter
   namespace: datadis
 spec:
   suspend: false
@@ -195,7 +125,7 @@ spec:
             hostnames:
               - "database3-vpn"
           containers:
-          - name: bigg-datadis-gather-last
+          - name: datadis-gather-starter
             image: docker.tech.beegroup-cimne.com/jobs/datadis:latest
             command: ["python3", "launcher.py", "-p", "last", "-l", "producer"]
             #command: ["/bin/sh", "-ec", "sleep 1000"]
@@ -239,10 +169,10 @@ spec:
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: bigg-datadis-gather-repair
+  name: datadis-gather-repair-starter
   namespace: datadis
 spec:
-  suspend: false
+  suspend: true
   schedule: "0 22 * * 0"
   successfulJobsHistoryLimit: 1
   failedJobsHistoryLimit: 1
@@ -283,7 +213,7 @@ spec:
             hostnames:
               - "database3-vpn"
           containers:
-          - name: bigg-datadis-gather-repair
+          - name: datadis-gather-repair-starter
             image: docker.tech.beegroup-cimne.com/jobs/datadis:latest
             command: ["python3", "launcher.py", "-p", "repair", "-l", "producer"]
             env:
@@ -321,6 +251,111 @@ spec:
           restartPolicy: Never
           imagePullSecrets:
           - name: registrypullsecret
-
+---
+apiVersion: batch/v1
+kind: CronJob
+metadata:
+  name: datadis-last-consumer
+  namespace: datadis
+spec:
+  suspend: false
+  schedule: "0 22 * * 5"
+  successfulJobsHistoryLimit: 1
+  failedJobsHistoryLimit: 1
+  jobTemplate:
+    spec:
+      backoffLimit: 0
+      completions: 10
+      parallelism: 10
+      completionMode: Indexed
+      template:
+        spec:
+          hostAliases:
+          - ip: "10.0.88.76"
+            hostnames:
+            - "master1.internal"
+          - ip: "10.0.87.95"
+            hostnames:
+              - "master2.internal"
+          - ip: "10.0.88.132"
+            hostnames:
+              - "worker1.internal"
+          - ip: "10.0.86.33"
+            hostnames:
+              - "worker2.internal"
+          - ip: "10.0.87.145"
+            hostnames:
+              - "worker3.internal"
+          - ip: "10.0.86.214"
+            hostnames:
+              - "worker4.internal"
+          - ip: "10.0.129.220"
+            hostnames:
+              - "kafka1.internal"
+          - ip: "10.0.88.175"
+            hostnames:
+              - "database1-vpn"
+          - ip: "10.0.88.151"
+            hostnames:
+              - "database2-vpn"
+          - ip: "10.0.87.50"
+            hostnames:
+              - "database3-vpn"
+          initContainers:
+          - name: datadis-last-consumer-wait
+            image: docker.tech.beegroup-cimne.com/jobs/datadis:latest
+            command: [ "python3", "launcher.py", "-p", "repair", "-l", "wait" ]
+            env:
+              - name: CONF_FILE
+                value: "config.json"
+            volumeMounts:
+              - name: datadis-harmonize-secret
+                mountPath: /home/ubuntu/datadis/config.json
+                subPath: config.json
+              - name: datadis-icaen-secret
+                mountPath: /home/ubuntu/datadis/plugins/icaen/config_icaen.json
+                subPath: config_icaen.json
+              - name: datadis-icat-secret
+                mountPath: /home/ubuntu/datadis/plugins/infraestructures/config_infra.json
+                subPath: config_infra.json
+          containers:
+          - name: datadis-last-consumer
+            image: docker.tech.beegroup-cimne.com/jobs/datadis:latest
+            command: ["python3", "launcher.py", "-p", "repair", "-l", "consumer"]
+            env:
+              - name: CONF_FILE
+                value: "config.json"
+            volumeMounts:
+            - name: datadis-harmonize-secret
+              mountPath: /home/ubuntu/datadis/config.json
+              subPath: config.json
+            - name: datadis-icaen-secret
+              mountPath: /home/ubuntu/datadis/plugins/icaen/config_icaen.json
+              subPath: config_icaen.json
+            - name: datadis-icat-secret
+              mountPath: /home/ubuntu/datadis/plugins/infraestructures/config_infra.json
+              subPath: config_infra.json
+          volumes:
+          - name: datadis-harmonize-secret
+            secret:
+              secretName: datadis-harmonize-secret
+              items:
+              - key: config.json
+                path: config.json
+          - name: datadis-icaen-secret
+            secret:
+              secretName: datadis-icaen-secret
+              items:
+                - key: config_icaen.json
+                  path: config_icaen.json
+          - name: datadis-icat-secret
+            secret:
+              secretName: datadis-icat-secret
+              items:
+                - key: config_infra.json
+                  path: config_infra.json
+          restartPolicy: Never
+          imagePullSecrets:
+          - name: registrypullsecret
 
  #kubectl create secret generic datadis-harmonize-secret --from-file=config.json=config.json --from-file=.env=env -n datadis
