--- a/requirements.txt
+++ b/requirements.txt
@@ -47,6 +47,7 @@ pyoxigraph==0.3.20
 pyparsing==3.1.1
 python-dateutil==2.8.2
 python-dotenv==1.0.1
+python-json-logger==2.0.7
 pytz==2023.3.post1
 PyYAML==6.0.1
 rapidfuzz==3.5.2
