--- a/plugins/infraestructures/mapping.yaml
+++ b/plugins/infraestructures/mapping.yaml
@@ -23,7 +23,7 @@ mappings:
   datadis-devices:
     sources:
       - [ 'data.json~jsonpath', '$.supplies[*]' ]
-    s: icat:system-datadis
+    s: icat:system-datadis-$(nif)
     po:
       - [ s4syst:hasSubSystem, icat:device-datadis-$(cups)-$(prop)]
 
@@ -36,7 +36,9 @@ mappings:
       - [ a, saref:Device ]
       - [ a, s4syst:System ]
       - [ saref:makesMeasurement, icat:$(measurement_uri) ]
-      - [ saref:hasProperty, bigg:Energy.Active ]
+      - [ saref:measuresProperty, bigg:Energy.Active ]
+      - [ bigg:measuresIn,  unit:KiloW-HR]
+
 
   measurementDatadis:
     sources:
@@ -46,6 +48,9 @@ mappings:
       - [ a, saref:Measurement ]
       - [ bigg:hash, $(hash) ]
       - [ owl:sameAs, icat:$(electric_measure_uri) ]
+      - [ saref:relatesToProperty, bigg:Energy.Active ]
+      - [ bigg:measurementFrequency, $(freq) ]
+      - [ saref:isMeasuredIn,  unit:KiloW-HR]
 
 
   # ELECTRIC SYSTEMS
@@ -68,7 +73,8 @@ mappings:
       - [ a, s4syst:System ]
       - [ foaf:name, ImportedFromGrid ]
       - [ saref:makesMeasurement, icat:$(electric_measure_uri) ]
-      - [ saref:hasProperty, bigg:Energy.Active ]
+      - [ saref:measuresProperty, bigg:Energy.Active ]
+      - [ bigg:measuresIn,  unit:KiloW-HR]
 
   measurementElectric:
     sources:
@@ -77,6 +83,9 @@ mappings:
     po:
       - [ a, saref:Measurement ]
       - [ bigg:hash, $(hash_elec) ]
+      - [ saref:relatesToProperty, bigg:Energy.Active ]
+      - [ bigg:measurementFrequency, $(freq) ]
+      - [ saref:isMeasuredIn,  unit:KiloW-HR]
 
 #
 #  systems:
