--- a/kubeconfigs/services.yaml
+++ b/kubeconfigs/services.yaml
@@ -82,7 +82,7 @@ spec:
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: datadis-gather-starter
+  name: datadis-gather
   namespace: datadis
 spec:
   suspend: false
@@ -129,7 +129,7 @@ spec:
             hostnames:
               - "database3-vpn"
           containers:
-          - name: datadis-gather-starter
+          - name: datadis-gather
             image: docker.tech.beegroup-cimne.com/jobs/datadis:latest
             command: ["python3", "launcher.py", "-p", "last", "-l", "producer"]
             #command: ["/bin/sh", "-ec", "sleep 1000"]
@@ -173,7 +173,7 @@ spec:
 apiVersion: batch/v1
 kind: CronJob
 metadata:
-  name: datadis-gather-repair-starter
+  name: datadis-gather-repair
   namespace: datadis
 spec:
   suspend: true
@@ -222,25 +222,8 @@ spec:
           - ip: "10.0.87.50"
             hostnames:
               - "database3-vpn"
-          initContainers:
-            - name: datadis-repair-consumer-wait
-              image: docker.tech.beegroup-cimne.com/jobs/datadis:latest
-              command: [ "python3", "launcher.py", "-p", "repair", "-l", "wait" ]
-              env:
-                - name: CONF_FILE
-                  value: "config.json"
-              volumeMounts:
-                - name: datadis-harmonize-secret
-                  mountPath: /home/ubuntu/datadis/config.json
-                  subPath: config.json
-                - name: datadis-icaen-secret
-                  mountPath: /home/ubuntu/datadis/plugins/icaen/config_icaen.json
-                  subPath: config_icaen.json
-                - name: datadis-icat-secret
-                  mountPath: /home/ubuntu/datadis/plugins/infraestructures/config_infra.json
-                  subPath: config_infra.json
           containers:
-          - name: datadis-gather-repair-starter
+          - name: datadis-gather-repair
             image: docker.tech.beegroup-cimne.com/jobs/datadis:latest
             command: ["python3", "launcher.py", "-p", "repair", "-l", "consumer"]
             env:
