--- a/plugins/icaen/mapping.yaml
+++ b/plugins/icaen/mapping.yaml
@@ -10,7 +10,7 @@ mappings:
     s: icaen:BUILDINGSPACE-$(ens)
     po:
       - [ bigg:isObservedByDevice, icaen:DEVICE-DatadisSource-$(cups)]
-      - [ bigg:hasUtilityPointOfDelivery, icaen:SUPPLY-$(cups)]
+      - [ bigg:hasUtilityPointOfDelivery, icaen:SUPPLY-$(supply_name)]
 
   devices:
     sources:
