Fixed 2 years issue

--- a/plugins/icaen/mapping.yaml
+++ b/plugins/icaen/mapping.yaml
@@ -22,12 +22,24 @@ mappings:
       - [ a, bigg:Element ]
       - [ a, bigg:Thing ]
       - [ bigg:deviceName, $(cups) ]
+      - [ bigg:distributor, $(distributor) ]
+      - [ bigg:marketer, $(marketer) ]
+      - [ bigg:tension, $(tension) ]
+      - [ bigg:accessFare, $(accessFare) ]
+      - [ bigg:contractedPower, $(contractedPowerkW) ]
+      - [ bigg:timeDiscrimination, $(timeDiscrimination) ]
+      - [ bigg:modePowerControl, $(modePowerControl) ]
       - [ bigg:startDate, $(startDate), xsd:dateTime ]
       - [ bigg:endDate, $(endDate), xsd:dateTime ]
-      - [ bigg:hasDeviceType, bigg:Meter.EnergyMeter.Electricity ]
-      - [ bigg:contractedPower, $(contractedPowerkW) ]
-      - [ bigg:tension, $(tension) ]
       - [ bigg:tariff, $(codeFare) ]
+      - [ bigg:selfConsumptionTypeCode, $(selfConsumptionTypeCode) ]
+      - [ bigg:selfConsumptionTypeDesc, $(selfConsumptionTypeDesc) ]
+      - [ bigg:partitionCoefficient, $(partitionCoefficient) ]
+      - [ bigg:cau, $(cau) ]
+      - [ bigg:installedCapacity, $(installedCapacity) ]
+      - [ bigg:lastMarketerDate, $(lastMarketerDate) ]
+      - [ bigg:maxPowerInstall, $(maxPowerInstall) ]
+      - [ bigg:hasDeviceType, bigg:Meter.EnergyMeter.Electricity ]
       - [ bigg:hasDeviceLocationInfo, icaen:LOCATION-DEVICE-DatadisSource-$(cups) ]
       - [ bigg:source, "DatadisSource" ]
       - [ bigg:nif,  $(nif)]
