--- a/requirements.txt
+++ b/requirements.txt
@@ -5,14 +5,14 @@ aiosignal==1.3.1
 async-timeout==4.0.3
 attrs==23.1.0
 beautifulsoup4==4.12.2
-beelib @ git+https://github.com/BeeGroup-cimne/beelib@8e58f27e29803872422ab5d9486c99bc20e04650
+beelib @ git+https://github.com/BeeGroup-cimne/beelib
 bs4==0.0.1
 certifi==2023.7.22
 charset-normalizer==3.3.2
 click==8.1.7
 colorlog==6.8.0
 croniter==2.0.1
-datadis @ git+https://github.com/BeeGroup-cimne/beedis@4d34b41e234f476514c0954aba054f980156f9c4
+datadis @ git+https://github.com/BeeGroup-cimne/beedis
 dnspython==2.4.2
 duckdb==0.7.1
 elementpath==4.1.5
